<resources>
    <string name="app_name">密码本</string>
    <string name="all">全选</string>
    <string name="fanxuan">反选</string>
    <string name="del">删除</string>
    <string name="leixing">描述</string>
    <string name="zhanghao">账号</string>
    <string name="password">密码</string>
    <string name="quxiao">取消</string>
    <string name="queding">确定</string>
    <string name="search">账号类型</string>
    <string name="caozuo_zhanghao">复制账号</string>
    <string name="caozuo_password">复制密码</string>
</resources>
