<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.administrator.password.Activity.MainActivity">
 <com.google.android.material.appbar.AppBarLayout
     android:layout_width="match_parent"
     android:layout_height="@dimen/toolbar_height"
     >

     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay" >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">

             <Button
                 android:id="@+id/Main_rede"
                 android:layout_width="@dimen/toolbar_button"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
                 android:scaleType="centerCrop"
                 android:background="@drawable/rede1"
                 android:layout_alignParentLeft="true"
                 />

             <androidx.appcompat.widget.SearchView
                 android:id="@+id/searc"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@+id/Main_rede"
                 android:layout_toLeftOf="@+id/Main_add"
                 android:layout_centerHorizontal="true"
                 app:queryHint="@string/search"
                 android:layout_marginLeft="20dp"
                 android:focusableInTouchMode="false"
                 />

             <Button
                 android:id="@+id/Main_add"
                 android:layout_width="@dimen/toolbar_button"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="0.1dp"
                 android:background="@drawable/add_selector" />

         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Main_Toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">



    </androidx.appcompat.widget.Toolbar>

    <com.example.administrator.password.View.Main_recycle
        android:id="@+id/Main_recy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Main_Toolbar"
        android:paddingLeft="10dp"
        >

    </com.example.administrator.password.View.Main_recycle>

    <LinearLayout
        android:id="@+id/Main_caozuo"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/Main_recy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         android:visibility="gone"
        >

        <CheckBox
            android:id="@+id/Main_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/all"
            android:textSize="26sp"
            android:background="#FFEFD5"
            />

        <Button
            android:id="@+id/Main_fanxuan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
             android:text="@string/fanxuan"
            android:textSize="26sp"
            android:background="@drawable/main_menu"
            />

        <Button
            android:id="@+id/Main_del"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
             android:text="@string/del"
            android:textSize="26sp"
            android:background="@color/Tomato"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
